k8s/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: fylo
spec:
  type: ClusterIP
  selector: { app: prometheus }
  ports:
    - { port: 9090, targetPort: 9090 }
